# InstallerMaker

./: .gitignore  CMakeLists.txt  README.md
example_package/: package.json
src/: configurator.cpp  configurator.hpp  configurator_main.cpp  installerengine.cpp  installerengine.hpp  installwizard.cpp  installwizard.hpp  main.cpp  shortcut.cpp  shortcut.hpp
